# CharacterMarkdown

./: .build-ignore  .cursorrules  .env.example  .gitignore  .luacheckrc  .pre-commit-config.yaml  .stylua.toml  AGENTS.md  ANTIQUITIES_FEATURE.md  ARMORY_BUILDS_UPDATE.md  AUTOMATION_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CHANGES_QUICK_REFERENCE.md  CHANGES_SUMMARY.md  CHUNKING_CODE_REVIEW.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CODE_IMPLEMENTATION_VERIFICATION.md  CODE_REVIEW.md  CODE_REVIEW_CHAMPION_CONSTELLATIONS.md  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_v2.1.0.md  COLLECTIBLES_IMPLEMENTATION.md  COLLECTIBLES_UPDATE.md  COMPLETE_ENHANCEMENT_SUMMARY.md  CONTINUE_SESSION_PROMPT.md  CP_DISCIPLINE_HEADER_CHANGE.md  CP_GRAPH.md  CharacterMarkdown.addon  CharacterMarkdown.lua  CharacterMarkdown.lua.backup  CharacterMarkdown.txt  CharacterMarkdown.xml  CharacterMarkdown_OptimizedLayout.lua.backup  CharacterMarkdown_Settings.lua  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  ENHANCED_STRUCTURE_REFERENCE.md  ENHANCED_VISUALS_IMPLEMENTATION.md  ESOUIDocumentationP50.txt  (+85 more)
.agent/: rules.md
.github/: testing.md
archive/: DOCUMENTATION_REORGANIZATION_PLAN.md  README.md
assets/: Kellen Dysart.md  Korianthas.md  Pelatiah.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHAMPION_DIAGRAM_ENHANCEMENT.md  CHAMPION_PATHFINDER_USAGE.md  CHAMPION_POINTS.md  CHAMPION_POINTS_FLOW.md  CHAMPION_POINTS_SYSTEM.md  CHUNKING.md  CHUNKING_ALGORITHM.md  CONTRIBUTING.md  CRAFT_BAG_FIX.md  CRAFT_BAG_SYSTEM_PROMPT.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_GUIDE.md  ESOUIDocumentation.txt  (+17 more)
(+265 files in other folders)
