[project]
name = "charactermarkdown"
version = "0.1.0"
description = "Trim unnecessary newlines in markdown files"
authors = [{ name = "Solaegis" }]
dependencies = []
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET", "T20"]
ignore = []
